--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #111115;
   --foreground: #171717;
+  --bodytext: rgb(188, 187, 203);
+  --font-color: #eaeaea;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +19,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  color: var(--bodytext);
   font-family: Arial, Helvetica, sans-serif;
+  color: var(--font-color);
 }
